# sufficiency-scorer

./: .gitignore  pyproject.toml
data/: literary_first_words.json  literary_ground_truth.json  literary_gt_fast.json  literary_gt_llm_judge.json  literary_gt_scores.json  literary_gt_scores_llm.json  literary_results.json  natural_personas.json  star_engine_sim.json
docs/plans/: 2026-03-19-insight-driven-refactor.md  2026-03-20-p0-p3-validation-and-upgrade.md
scripts/: literary_gt_eval.py  literary_gt_eval_fast.py  literary_gt_eval_llm.py  literary_gt_eval_llm_judge.py  literary_gt_eval_v3.py  literary_validation.py  star_engine_pdca.py  star_engine_sim.py  validate_thresholds.py
sufficiency_scorer/: __init__.py  config.py  evaluator.py  insight_extractor.py  insight_generator.py  insight_generator_fast.py  insight_generator_v3.py  models.py  orchestrator.py  precompute.py  scorer.py  star_engine.py  star_label_generator.py  star_labels.py  v8x_fog_signals.py  v8x_labels.py  v8x_star_generator.py
sufficiency_scorer/detectors/: __init__.py  base.py  character.py  communication_dna.py  conflict.py  connection_response.py  emotion.py  eq.py  fragility.py  humor.py  love_language.py  mbti.py  soulgraph.py
tests/: test_dynamic_reframe.py  test_eq.py  test_eval_scenarios.py  test_evaluator.py  test_insight_extractor.py  test_integration.py  test_models.py  test_orchestrator.py  test_scenarios.py  test_scorer.py  test_star_engine.py  test_v8x_fog_signals.py  test_v8x_labels.py  test_v8x_star_engine.py  test_v8x_star_generator.py  test_validation.py
