[project]
name = "sufficiency-scorer"
version = "0.1.0"
description = "SoulMap Touch ID ring progress scorer - measures dimensional sufficiency of user speech"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
